# pipeline_test

./: .env  .gitignore  02-README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  docker-compose.yml  pyproject.toml
airflow/plugins/tasks/: data_generator.py
config/: airflow.cfg
dags/: sample_data_processer_dag.py
dags/configs/: sample_data_processer_configs.yaml
plugins/dbt/: .gitignore  dbt_project.yml  profiles.yml
plugins/dbt/models/mart/: dim_department.sql  dim_product.sql  dim_sensor.sql  fact_sensor.sql  model_properties.yml
plugins/dbt/models/source/: source_properties.yml
plugins/tasks/: data_generator.py  parquet_loader.py
plugins/transformers/: duckdb.py
scripts/: 01-setup_datalake.sql
