[tool.poetry]
name = "datawow-data-platform"
version = "0.1.0"
description = ""
authors = ["NopateeR <nopatee.ru@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "tasks", from = "plugins" },
    { include = "transformers", from = "plugins" },
]


[tool.poetry.dependencies]
python = "^3.12"
dbt-postgres = "^1.9.0"
sqlfluff = "^3.4.2"
dbt-core = "^1.10.7"
psycopg2-binary = "^2.9.0"
psycopg = "^3.2.3"
celery = "^5.3.0"
apache-airflow = "^3.0.4"
apache-airflow-providers-postgres = "^5.7.1"
numpy = "^1.24.3"
pandas = "^2.0.0"
tqdm = "^4.65.0"
pyarrow = "^21.0.0"
fastparquet = "^2026.4.0"
dag-factory = "^1.1.0"
astronomer-cosmos = "^1.14.0"
duckdb = "^1.4.0"
dbt-duckdb  = "^1.5.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
